--- a/index.html
+++ b/index.html
@@ -81,29 +81,18 @@
     <!--</div>  -->
     </section> 
     <section>
-        <div class="box" class="logo">
+        <div class="achieve">
             <h3>Sięgamy wysoko!</h3>
-            <ul>
-                <li>
-                    <div  class="logo"><img src="assets\51265804_2165577033481703_7143964921871466496_o.jpg" alt="emblemat MP 2018">
+                    <div  class="support"><img src="assets\51265804_2165577033481703_7143964921871466496_o.jpg" alt="emblemat MP 2018">
                     </div>
-                </li>
-                <li>
-                    <div class="logo">
+                    <div class="support">
                         <img src="assets\50786161_2165577030148370_162273936141189120_o.jpg" alt="emblemat MP 2015">
                     </div>
-                </li>
-                 <li>
-                     <div class="logo"><img src="assets\50936728_2165577050148368_6703466466039037952_o.jpg" alt="emblemat MP 2013">
+                     <div class="support"><img src="assets\50936728_2165577050148368_6703466466039037952_o.jpg" alt="emblemat MP 2013">
                     </div>
-                 </li>
-                <li>
-                    <div class="logo">
+                    <div class="support">
                             <img src="assets\50805214_2165577040148369_5269664704548044800_o.jpg" alt="emblemat MP 2012">
                     </div>
-                </li>
-            </ul>
-
         </div>
     </section>
 </main>    
